# Bancada-IoT

./: README.md
INMET WebCrawler - Container/: Dockerfile  run.sh  testeMQTT.py
Kicad/: README.md
Kicad/ESP32-LoRa-PainelSolar/: ESP32-LoRa-PainelSolar-B_Cu.gbr  ESP32-LoRa-PainelSolar-Edge_Cuts.gbr  ESP32-LoRa-PainelSolar-NPTH.drl  ESP32-LoRa-PainelSolar-PTH.drl  ESP32-LoRa-PainelSolar-job.gbrjob  ESP32-LoRa-PainelSolar.kicad_pcb  ESP32-LoRa-PainelSolar.kicad_prl  ESP32-LoRa-PainelSolar.kicad_pro  ESP32-LoRa-PainelSolar.kicad_sch
Kicad/ESP32LoraWAN/: ESP32LoraWAN-NPTH.drl  ESP32LoraWAN-PTH.drl  ESP32LoraWAN.kicad_pcb  ESP32LoraWAN.kicad_prl  ESP32LoraWAN.kicad_pro  ESP32LoraWAN.kicad_sch  fp-info-cache
Kicad/PiPico/: PiPico-Edge_Cuts.gbr  PiPico.kicad_pcb  PiPico.kicad_prl  PiPico.kicad_pro  fp-info-cache
Kicad/baseSX1276/: baseSX1276-B_Cu.gbr  baseSX1276-Edge_Cuts.gbr  baseSX1276-NPTH-drl_map.gbr  baseSX1276-NPTH.drl  baseSX1276-PTH-drl_map.gbr  baseSX1276-PTH.drl  baseSX1276-job.gbrjob  baseSX1276.kicad_pcb  baseSX1276.kicad_prl  baseSX1276.kicad_pro  baseSX1276.kicad_sch
Pi Pico/: README.md
Pi Pico com RFM95W/: README.md  picow_otaa.ino
Pi Pico com RFM95W/Exemplos para o Pico SDK/: run.sh
Pi Pico com RFM95W/Exemplos para o Pico SDK/blink_PicoW/: CMakeLists.txt  blink.c
Pi Pico com RFM95W/LMIC-node-main/: platformio.ini
Pi Pico com RFM95W/PCB Kicad/: PiPico-B_Cu.gbr  PiPico-job.gbrjob  PiPico.kicad_sch
Pi Pico com RFM95W/picow_otaa/: Codec para chirpstac.md  picow_otaa.ino
Selenium/: Dockerfile  README.md  inmet.py  requirements.txt
(+54 files in other folders)
